feat: UI테스트 해당 뷰가 같은지 조건 추가, accessibilityIdentifer 추가
ghojeong/issue-tracker/#34

--- a/mobile/issue-tracker/issue-tracker/New Group/Base.lproj/Main.storyboard
+++ b/mobile/issue-tracker/issue-tracker/New Group/Base.lproj/Main.storyboard
@@ -45,6 +45,7 @@
                         </subviews>
                         <viewLayoutGuide key="safeArea" id="6Tk-OE-BBY"/>
                         <color key="backgroundColor" systemColor="systemBackgroundColor"/>
+                        <accessibility key="accessibilityConfiguration" identifier="MainView"/>
                         <constraints>
                             <constraint firstItem="6Tk-OE-BBY" firstAttribute="bottom" secondItem="5aC-AE-mki" secondAttribute="bottom" constant="16" id="2GO-dr-G6m"/>
                             <constraint firstItem="6Tk-OE-BBY" firstAttribute="bottom" secondItem="p5k-Wn-cPB" secondAttribute="bottom" id="6Ss-8Y-LGx"/>
